First_initial_rule + add_new_word_ko

--- a/Siritori/word_list/word_list.ipynb
+++ b/Siritori/word_list/word_list.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -234,44 +234,72 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>감자</td>\n",
+       "      <td>가게</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>병원</td>\n",
+       "      <td>가격</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>수학</td>\n",
+       "      <td>가구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>의자</td>\n",
+       "      <td>가까이</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>치즈</td>\n",
+       "      <td>가난</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>학생</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3133</th>\n",
+       "      <td>흥분</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3134</th>\n",
+       "      <td>희곡</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3135</th>\n",
+       "      <td>희망</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3136</th>\n",
+       "      <td>희생</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3137</th>\n",
+       "      <td>흰색</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3138 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       단어\n",
-       "index    \n",
-       "0      감자\n",
-       "1      병원\n",
-       "2      수학\n",
-       "3      의자\n",
-       "4      치즈\n",
-       "5      학생"
+       "        단어\n",
+       "index     \n",
+       "0       가게\n",
+       "1       가격\n",
+       "2       가구\n",
+       "3      가까이\n",
+       "4       가난\n",
+       "...    ...\n",
+       "3133    흥분\n",
+       "3134    희곡\n",
+       "3135    희망\n",
+       "3136    희생\n",
+       "3137    흰색\n",
+       "\n",
+       "[3138 rows x 1 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
